# indiegogo-scraper

./: .gitignore  README.MD  averages.ipynb  azure-parameters.json  azure-template.json  convert_to_csv.py  pyproject.toml  scraper.py  scraperparams.py
