[tool.poetry]
name = "indiegogo-scraper"
version = "0.0.3"
description = "Automatically scrape indiegogo's top ranking project in community service"
authors = ["Camille Chin Rui Bin"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
